--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,7 @@ dependencies {
     //轮播图
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //竖导航
+    implementation 'q.rorbin:VerticalTabLayout:1.2.5'
 
 }
